# Psychophysiology-Lab

./: .gitignore  db.sqlite3  main.py  pyproject.toml  requirments.txt  seed_data.py  translate_po_new.py
config/: settings.py  urls.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.po
psychology_lab/: admin.py  apps.py  forms.py  middleware.py  models.py  translation.py  urls.py  views.py
psychology_lab/migrations/: 0001_initial.py  0002_alter_contactmessage_options_and_more.py  0003_achievement.py  0004_sitesettings_logo_secondary.py
static/css/: style.css
static/js/: main.js
templates/psychology_lab/: _team_card.html  achievements.html  base.html  contact.html  home.html  news.html  news_detail.html  page_detail.html  publications.html  research.html  research_detail.html  team.html
