[project]
name = "psychophysiology-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.5",
    "django-ckeditor>=6.7.3",
    "django-ckeditor-5>=0.2.20",
    "django-environ>=0.13.0",
    "django-jazzmin>=3.0.4",
    "django-modeltranslation>=0.20.3",
    "djangorestframework>=3.17.1",
    "pillow>=12.2.0",
]
